[gd_scene load_steps=3 format=3 uid="uid://dqem531qms3s4"]

[ext_resource type="Script" path="res://components/health_component.gd" id="1_llw7g"]
[ext_resource type="Script" path="res://enemies/ground_vehicle.gd" id="1_xoxvu"]

[node name="GroundVehicle" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 15
motion_mode = 1
script = ExtResource("1_xoxvu")

[node name="VehicleSprite" type="Sprite2D" parent="."]

[node name="DestroyedVehicleSprite" type="Sprite2D" parent="."]

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("1_llw7g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Fires" type="Node2D" parent="."]
